src/test/ui/span/visibility-ty-params.stderr
error: unexpected generic arguments in path
  --> $DIR/visibility-ty-params.rs:6:5
   |
LL | m!{ S<u8> } //~ ERROR unexpected generic arguments in path
   |     ^^^^^

error: unexpected generic arguments in path
  --> $DIR/visibility-ty-params.rs:9:9
   |
LL |     m!{ m<> } //~ ERROR unexpected generic arguments in path
   |         ^^^

error: aborting due to 2 previous errors

